--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -124,6 +124,9 @@ h1 .btn-sm {
 .helper-display-inline {
     display: inline !important;
 }
+.helper-display-none {
+    display: none !important;
+}
 .helper-width-auto {
     width: auto;
 }
