--- a/src/pretix/control/templates/pretixcontrol/event/index.html
+++ b/src/pretix/control/templates/pretixcontrol/event/index.html
@@ -7,6 +7,13 @@
 {% block content %}
     <h1>
         {{ request.event.name }}
+        <small>
+            {% if request.event.has_subevents %}
+                {% trans "Event series" %}
+            {% else %}
+                {{ request.event.get_date_range_display }}
+            {% endif %}
+        </small>
     </h1>
     {% if actions|length > 0 %}
         <div class="panel panel-danger">
