Pagination improvements, allow to select page size

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -486,3 +486,10 @@ body.loading #wrapper {
 .iconcol {
     width: 1.28571em;
 }
+
+ul.pagination {
+    margin-bottom: 0;
+}
+.pagination-container {
+    margin-bottom: 20px;
+}
