--- a/src/pretix/static/pretixpresale/scss/_forms.scss
+++ b/src/pretix/static/pretixpresale/scss/_forms.scss
@@ -49,3 +49,20 @@
   padding: 0;
   list-style-type: none;
 }
+.accordion-radio {
+  display: block;
+  margin: 0;
+}
+.panel-default>.accordion-radio>.panel-heading {
+  color: #333;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  padding: 12px 15px;
+
+  input[type=radio] {
+    margin-top: 0;
+    margin-right: 5px;
+    position: relative;
+    top: 2px;
+  }
+}
