Checkout UX: Going back to editing the invoice address opens accordion accordingly
Thanks @breunigs for the suggestion

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -74,7 +74,7 @@
                     <div class="panel panel-primary panel-contact">
                         <div class="panel-heading">
                             <div class="pull-right">
-                                <a href="{% eventurl request.event "presale:event.checkout" step="questions" %}">
+                                <a href="{% eventurl request.event "presale:event.checkout" step="questions" %}?invoice=1">
                                     <span class="fa fa-edit"></span>
                                     {% trans "Modify" %}
                                 </a>
