--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -113,6 +113,7 @@
                                                     <label>
                                                         {% if max_times > 1 %}
                                                             <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                                                    pattern="\d*"
                                                                     max="{{ item.order_max }}" name="variation_{{ item.id }}_{{ var.id }}">
                                                         {% else %}
                                                             <input type="radio" name="_voucher_item"
@@ -182,6 +183,7 @@
                                         <label>
                                             {% if max_times > 1 %}
                                                 <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                                        pattern="\d*"
                                                         max="{{ item.order_max }}" name="item_{{ item.id }}">
                                             {% else %}
                                                 <input type="radio" name="_voucher_item"
