--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -172,6 +172,9 @@ body.loading .container {
     .checkout-button-row > div {
         margin-bottom: 15px;
     }
+    .checkout-button-row > div.clearfix {
+        margin: 0;
+    }
 }
 
 .dl-horizontal dt  {
