--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html
@@ -4,7 +4,20 @@
     <p>{% blocktrans trimmed %}
         This order has been paid via bank transfer.
     {% endblocktrans %}</p>
-
+{% elif order.status == "p" %}
+    <p>{% blocktrans trimmed %}
+        This order has been marked as paid via bank transfer manually.
+    {% endblocktrans %}</p>
+{% elif order.status == "r" %}
+    <p>{% blocktrans trimmed %}
+        This order has been paid via bank transfer and marked as refunded.
+    {% endblocktrans %}</p>
+{% else %}
+    <p>{% blocktrans trimmed %}
+        This order has been planned to be paid via bank transfer, but no payment has been received yet.
+    {% endblocktrans %}</p>
+{% endif %}
+{% if payment_info %}
     <dl class="dl-horizontal">
         <dt>{% trans "Payer" %}</dt>
         <dd>{{ payment_info.payer }}</dd>
@@ -14,15 +27,6 @@
         <dd>{{ payment_info.reference }}</dd>
     </dl>
 {% else %}
-    {% if order.status == "p" %}
-        <p>{% blocktrans trimmed %}
-            This order has been marked as paid via bank transfer manually.
-        {% endblocktrans %}</p>
-    {% else %}
-        <p>{% blocktrans trimmed %}
-            This order has been planned to be paid via bank transfer, but no payment has been received yet.
-        {% endblocktrans %}</p>
-    {% endif %}
     <dl class="dl-horizontal">
         <dt>{% trans "Reference code" %}</dt>
         <dd>{{ order.full_code }}</dd>
