--- a/src/pretix/base/templates/pretixbase/email/base.html
+++ b/src/pretix/base/templates/pretixbase/email/base.html
@@ -29,7 +29,7 @@
 
     .content h2, .content h3 {
         margin-bottom: 20px;
-        margin-top: 0;
+        margin-top: 10px;
     }
 
     a {
@@ -96,15 +96,17 @@
     .content table td {
         vertical-align: top;
         text-align: left;
-        padding: 5px;
+        padding: 5px 0;
     }
     a.button {
         display: inline-block;
-        padding: 5px 10px;
-        border: 1px solid #e8e8e8;
-        border-radius: 5px 5px;
-        -webkit-border-radius: 5px 5px;
-        -moz-border-radius: 5px 5px;
+        padding: 10px 16px;
+        font-size: 14px;
+        line-height: 1.33333;
+        border: 1px solid #cccccc;
+        border-radius: 6px;
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
         margin: 5px;
         text-decoration: none;
         color: {{ color }};
