Link in email to pause all notifications

--- a/src/pretix/base/templates/pretixbase/email/notification.html
+++ b/src/pretix/base/templates/pretixbase/email/notification.html
@@ -43,6 +43,9 @@
                 {% trans "You receive these emails based on your notification settings." %}<br>
                 <a href="{{ settings_url }}">
                     {% trans "Click here to view and change your notification settings" %}
+                </a><br>
+                <a href="{{ disable_url }}">
+                    {% trans "Click here disable all notifications immediately." %}
                 </a>
             </div>
         </td>
