--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -81,7 +81,7 @@
         </div>
     {% endif %}
 
-    {% if event.has_subevents and not cart_namespace %}
+    {% if show_dates %}
         {% if subevent %}
             <a class="subevent-toggle">
                 {% trans "View other date" %}
@@ -90,7 +90,7 @@
             <h3>{% trans "Choose date to buy a ticket" %}</h3>
         {% endif %}
         <div class="subevent-list">
-            {% if event.settings.event_list_type == "calendar" %}
+            {% if list_type == "calendar" %}
                 {% include "pretixpresale/event/fragment_subevent_calendar.html" %}
             {% else %}
                 {% include "pretixpresale/event/fragment_subevent_list.html" %}
