--- a/src/pretix/control/templates/pretixcontrol/event/settings_base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings_base.html
@@ -57,7 +57,7 @@
             </li>
             <li {% if "event.settings.mail" == url_name %}class="active"{% endif %}>
                 <a href="{% url 'control:event.settings.mail' organizer=request.event.organizer.slug event=request.event.slug %}">
-                    {% trans "Email" %}
+                    {% trans "E-mail" %}
                 </a>
             </li>
             <li {% if "event.settings.tax" in url_name %}class="active"{% endif %}>
