--- a/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
@@ -26,7 +26,7 @@
                     <legend>{% trans "Voucher details" %}</legend>
                     {% bootstrap_field form.code layout="control" %}
                     {% bootstrap_field form.max_usages layout="control" %}
-                    {% bootstrap_field form.valid_until layout="control" horizontal_field_class="col-md-9 splitdatetimerow" %}
+                    {% bootstrap_field form.valid_until layout="control" %}
                     {% bootstrap_field form.block_quota layout="control" %}
                     {% bootstrap_field form.allow_ignore_quota layout="control" %}
                     <div class="form-group">
