--- a/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
+++ b/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
@@ -2,18 +2,19 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% load staticfiles %}
-{% block title %}{% trans "pretixdroid configuration" %}{% endblock %}
+{% block title %}{% trans "Check-in device configuration" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "pretixdroid configuration" %}</h1>
+    <h1>{% trans "Check-in device configuration" %}</h1>
     <p>{% blocktrans trimmed %}
         pretixdroid is an Android app that you can use to control tickets at the entrance of your event.
+        pretixdesk is the corresponding app for desktop computers.
     {% endblocktrans %}</p>
 
     {% if not configs or "create" in request.GET %}
         <h2>{% trans "Create app configuration" %}</h2>
         <p>
             {% blocktrans trimmed %}
-                To start scanning tickets with our Android app, first create a configuration code here:
+                To start scanning tickets with our apps, first create a configuration code here:
             {% endblocktrans %}
         </p>
         <form action="?add" method="post" class="form-horizontal">
@@ -24,6 +25,7 @@
             {% bootstrap_field add_form.items layout="horizontal" %}
             {% bootstrap_field add_form.show_info layout="horizontal" %}
             {% bootstrap_field add_form.allow_search layout="horizontal" %}
+            {% bootstrap_field add_form.app layout="horizontal" %}
             <div class="form-group">
                 <div class="col-md-offset-3 col-md-9">
                     <button type="submit" class="btn btn-primary btn-save" name="add" value="1">
@@ -56,7 +58,14 @@
                 <tbody>
                 {% for ac in configs %}
                     <tr>
-                        <td>{{ ac.key|slice:"0:8" }}…</td>
+                        <td>
+                            {% if ac.app == "pretixdroid" %}
+                                <span class="fa fa-fw fa-android"></span>
+                            {% elif ac.app == "pretixdesk" %}
+                                <span class="fa fa-fw fa-desktop"></span>
+                            {% endif %}
+                            {{ ac.key|slice:"0:8" }}…
+                        </td>
                         <td>
                             <a href="{% url "control:event.orders.checkinlists.show" organizer=request.event.organizer.slug event=request.event.slug list=ac.list.id %}">{{ ac.list }}</a>
                         </td>
@@ -74,7 +83,7 @@
                         <td>{% if ac.allow_search %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
                         <td class="text-right">
                             <a href="{% url "plugins:pretixdroid:config.code" organizer=request.event.organizer.slug event=request.event.slug config=ac.pk %}" class="btn btn-default">
-                                <span class="fa fa-qrcode"></span> {% trans "Show QR code" %}
+                                <span class="fa fa-qrcode"></span> {% trans "Configure device" %}
                             </a>
                             <button class="btn btn-danger" name="delete" value="{{ ac.pk }}">
                                 <span class="fa fa-trash"></span>
