--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -202,7 +202,7 @@
         {% endif %}
         <div class="clearfix"></div>
     </div>
-    {% if order.status == "n" and order.can_user_cancel %}
+    {% if order.can_user_cancel %}
         <div class="row">
             <div class="col-md-12 text-right">
                 <p>
