--- a/src/pretix/control/templates/pretixcontrol/items/question_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question_edit.html
@@ -23,6 +23,7 @@
             {% bootstrap_field form.question layout="control" %}
             {% bootstrap_field form.help_text layout="control" %}
             {% bootstrap_field form.type layout="control" %}
+            {% bootstrap_field form.ask_during_checkin layout="control" %}
             {% bootstrap_field form.required layout="control" %}
         </fieldset>
         <fieldset>
