--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -53,7 +53,7 @@
             <div class="panel-heading">
                 {% if payment_provider.identifier != "free" %}
                     <div class="pull-right">
-                        <a href="{% eventurl request.event "presale:event.checkout" step="payment" %}">
+                        <a href="{% eventurl request.event "presale:event.checkout" step="payment" cart_namespace=cart_namespace|default_if_none:"" %}">
                             <span class="fa fa-edit"></span>
                             {% trans "Modify" %}
                         </a>
@@ -74,7 +74,7 @@
                     <div class="panel panel-primary panel-contact">
                         <div class="panel-heading">
                             <div class="pull-right">
-                                <a href="{% eventurl request.event "presale:event.checkout" step="questions" %}?invoice=1">
+                                <a href="{% eventurl request.event "presale:event.checkout" step="questions" cart_namespace=cart_namespace|default_if_none:"" %}?invoice=1">
                                     <span class="fa fa-edit"></span>
                                     {% trans "Modify" %}
                                 </a>
@@ -110,7 +110,7 @@
                 <div class="panel panel-primary panel-contact">
                     <div class="panel-heading">
                         <div class="pull-right">
-                            <a href="{% eventurl request.event "presale:event.checkout" step="questions" %}">
+                            <a href="{% eventurl request.event "presale:event.checkout" step="questions" cart_namespace=cart_namespace|default_if_none:"" %}">
                                 <span class="fa fa-edit"></span>
                                 {% trans "Modify" %}
                             </a>
