Copy some frontend styles to the backend

--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -271,3 +271,6 @@ table td > .checkbox input[type="checkbox"] {
   margin: 0;
   position: static;
 }
+.panel-title .radio {
+  margin-left: 20px;
+}
