Fix encoding of error messages

--- a/src/pretix/base/templates/error.html
+++ b/src/pretix/base/templates/error.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/x-scss" href="{% static "pretixbase/scss/error.scss" %}" />
     {% endcompress %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 </head>
 <body>
