--- a/src/pretix/control/templates/pretixcontrol/users/index.html
+++ b/src/pretix/control/templates/pretixcontrol/users/index.html
@@ -54,7 +54,7 @@
                 <td><strong>
                     <a href="{% url "control:users.edit" id=u.pk %}">{{ u.email }}</a>
                 </strong></td>
-                <td>{{ u.fullname }}</td>
+                <td>{{ u.fullname|default_if_none:"" }}</td>
                 <td>{% if u.is_active %}<span class="fa fa-check-circle"></span>{% endif %}</td>
                 <td>{% if u.is_superuser %}<span class="fa fa-check-circle"></span>{% endif %}</td>
                 <td class="text-right">
